--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "discord.js": "^13.8.0",
     "dotenv": "^16.0.1",
     "frame": "github:greys-bots/frame",
-    "pg": "^8.7.3"
+    "pg": "^8.7.3",
+    "tinycolor2": "^1.4.2"
   }
 }
